feat: complete underfitting and overfitting questions

--- a/Supervised_Learning/A03_-_Model_Evaluation/Underfitting_and_Overfitting.ipynb
+++ b/Supervised_Learning/A03_-_Model_Evaluation/Underfitting_and_Overfitting.ipynb
@@ -2689,11 +2689,11 @@
    "source": [
     "**>> Analise e Discuta:**\n",
     "\n",
-    "Mantendo o conjunto de teste fixo, por que vemos uma queda na variância e na amplitude conforme mais dados de treino são utilizados? Como a amplitude (diferença entre o máximo e o mínimo) do desempenho varia com o tamanho do conjunto de treino? O que isso nos diz sobre a confiabilidade do modelo com tamanhos pequenos de conjunto de treino?\n",
+    "Mantendo o conjunto de teste fixo, como o desempenho do modelo varia com o tamanho do conjunto de treino? O que isso nos diz sobre a confiabilidade do modelo com tamanhos pequenos de conjunto de treino?\n",
     "\n",
     "**Sua resposta aqui:**\n",
     "\n",
-    "__*RESULTADOS INCOERENTES...*__\n",
+    "_Com o aumento do conjunto de treinamento, observa-se que todas as variáveis acima aumentam: média, variância e amplitude da acurácia. Isso indica que o desempenho aumenta proporcionalmente ao tamanho do conjunto de treinamento. No entanto, mesmo com menor desempenho com menores proporções de dados de treinamento, os resultados variavam menos, mostrando um viés mais alto, porém uma precisão maior também. Ainda é melhor utilizar mais dados para treinamento, porém os resultados apresentam maior variação e deve-se utilizar mais testes para se conferir com mais certeza o real desempenho do modelo._\n",
     "\n",
     "---"
    ]
@@ -3336,20 +3336,6 @@
     "_Sugeriria uma rede neural com mais camadas ocultas, possivelmente com alguma outra estratégia adicional nas camadas, como Dropout, para adicionar um pouco mais de aleatoriedade na fronteira de decisão do modelo. Partindo para outros modelos, possivelmente uma Árvore de Decisão se desempenhe muito bem com essa distribuição ou, no pior caso, utilizando Florestas Aleatórias com algum nível de poda._\n",
     "\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "KT8s5BoemIym"
-   },
-   "source": [
-    "# Entrega\n",
-    "\n",
-    "Preencha as respostas nos campos indicados ao longo do notebook.\n",
-    "Envie seu notebook (com as respostas) exportado para **PDF** no Moodle.\n",
-    "\n",
-    "**Atenção:** Ainda que esta atividade seja discutida e resolvida em grupos, cada aluno ou aluna deve enviar o seu notebook com as respostas desenvolvidas com suas próprias palavras. A detecção de entregas iguais configurará e será tratada como plágio."
    ]
   }
  ],
